--- a/templates/user/pages/home.html
+++ b/templates/user/pages/home.html
@@ -1,5 +1,6 @@
-
 {{ define "index" }}
+<link rel=stylesheet href="/static/user/css/Homepage.Head.styles.css">
+
 <div class=master-wrapper-content>
     <div class=master-column-wrapper>
        <div class=center-1>
